[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/AssetsFinals/Props/pixil-frame-0_80.png" type="Texture" id=1]
[ext_resource path="res://src/butons/butons.gd" type="Script" id=2]
[ext_resource path="res://src/terminal/TerminalTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/AssetsFinals/Sonido/BeepBox-Song_8_mp3cut.net.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="buttons" type="Node2D"]
script = ExtResource( 2 )

[node name="button1" type="Area2D" parent="."]
position = Vector2( -22.6926, 1.94806 )

[node name="ColorRect" type="ColorRect" parent="button1"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="button1"]
position = Vector2( 19.6517, 69.4081 )
scale = Vector2( 2.07521, 7.00357 )
shape = SubResource( 1 )

[node name="button2" type="Area2D" parent="."]
position = Vector2( 60.2094, 1.94806 )

[node name="ColorRect" type="ColorRect" parent="button2"]
margin_left = 6.99817
margin_right = 46.9982
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="button2"]
position = Vector2( 26.6499, 68.2417 )
scale = Vector2( 2.07521, 7.00357 )
shape = SubResource( 1 )

[node name="button3" type="Area2D" parent="."]
position = Vector2( 164.267, 1.1553 )

[node name="ColorRect" type="ColorRect" parent="button3"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="button3"]
position = Vector2( 19.6517, 69.4081 )
scale = Vector2( 2.07521, 7.00357 )
shape = SubResource( 1 )

[node name="pixil-frame-0_80" type="Sprite" parent="."]
position = Vector2( 88.1167, -73.2942 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 3.14789
margin_top = -95.0
margin_right = 43.1479
margin_bottom = -55.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Solution" type="Label" parent="Panel"]
margin_left = -0.540359
margin_top = -1.62108
margin_right = 161.46
margin_bottom = 28.3789
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interacted" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="button1" to="." method="_on_button1_area_entered"]
[connection signal="area_exited" from="button1" to="." method="_on_button1_area_exited"]
[connection signal="area_entered" from="button2" to="." method="_on_button2_area_entered"]
[connection signal="area_exited" from="button2" to="." method="_on_button2_area_exited"]
[connection signal="area_entered" from="button3" to="." method="_on_button3_area_entered"]
[connection signal="area_exited" from="button3" to="." method="_on_button3_area_exited"]
